Updated version that accepts txt and pdf version
